fix basic access to nested uno structures fdo#60117

Although basic might appear to correctly change nested struct elements
fdo#60117 shows that basic can be fooled ( and even the watch(ed) variable
in the debugger shows the expected values ). The problem stems from the
fact that the uno object held by basic isn't infact modified when changed
via the introspection uno service.

Additionally pimp the existing tests to check the actual uno struct to see
if the changes made are *really* reflected in the object

Change-Id: Iff007e17df87148ea81e69d3567c8cf9857fdcaa